src/test/deca/context/invalid/test_passe1_1.deca
// test condition 1.3
//resultat : Super Class A should be declared first

class B extends A{

}